--- a/index.html
+++ b/index.html
@@ -7,15 +7,7 @@
         <title>Document</title>
     </head>
     <body>
-        <h1>Welcome to git</h1>
-        <p>L'option -u indique à git de créer toutes les informations
-             nécessaires pour rendre la branche traçable. Il faut ensuite spécifier
-              le nom du repository distant (par défaut, il se nomme origin) et le nom
-               de la branche.</p>
-
-               <p>L'option -u indique à git de créer toutes les informations
-                nécessaires pour rendre la branche traçable. Il faut ensuite spécifier
-                 le nom du repository distant (par défaut, il se nomme origin) et le nom
-                  de la branche. To delete!!!</p>
+        <h1>My first push</h1>
+        
     </body>
 </html>
