--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
               le nom du repository distant (par défaut, il se nomme origin) et le nom
                de la branche.</p>
 
-               <!--<p>L'option -u indique à git de créer toutes les informations
-                nécessaires pour rendre la branche traçable. Il faut ensuite spécifier
-                 le nom du repository distant (par défaut, il se nomme origin) et le nom
-                  de la branche. To delete!!!</p>-->
+             <p>Github, Inc est une entreprise de développement et services logiciels sise
+                 aux États-Unis. Github développe notamment la plateforme Github,</p>
     </body>
 </html>
