--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF_8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="Viewport" content="Width=device-width, initiql">
+        <link rel="stylesheet" href="style.css">
         <title>Document</title>
     </head>
     <body>
@@ -15,5 +16,7 @@
 
              <p>Github, Inc est une entreprise de développement et services logiciels sise
                  aux États-Unis. Github développe notamment la plateforme Github,</p>
+
+                 
     </body>
 </html>
