modifivations de la branch

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
              <p>Github, Inc est une entreprise de développement et services logiciels sise
                  aux États-Unis. Github développe notamment la plateforme Github,</p>
 
+                 <p>
+                    Add to Developer branche!!!
+                    Github, Inc est une entreprise de développement et services logiciels sise
+                 aux États-Unis. Github développe notamment la plateforme Github,
+                </p>
+
                  
     </body>
 </html>
